--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -149,13 +149,13 @@ input {
     height: auto !important;
 }
 
-#error_explanation {
-    color: red;
-    ul {
-        color: red;
-        margin: 0 0 30px 0;
-    }
-}
+// #error_explanation {
+//     color: red;
+//     ul {
+//         color: red;
+//         margin: 0 0 30px 0;
+//     }
+// }
 
 // .field_with_errors {
 //     @extend .is-invalid;
@@ -172,4 +172,8 @@ input {
     width: 100%;
     margin-top: 45px;
     @include box_sizing;
+}
+
+.show {
+    opacity: 1 !important;
 }
