--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,9 +13,9 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", '#' %></li>
+                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
                 <li class="divider"></li>
-                <li><%= link_to "Log Out", root_path, method: "delete" %></li>
+                <li><%= link_to "Log Out", logout_path, method: :delete %></li>
               </ul>
             </li>
           <% else %>
