--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -164,6 +164,18 @@ input {
 //     }
 // }
 
+/* Users index */@at-root
+
+.users {
+    list-style: none;
+    margin: 0;
+    li {
+        overflow: auto;
+        padding: 10px 0;
+        border-bottom: 1px solid $gray-medium-light;
+    }
+}
+
 /* Miscellaneous */
 
 .debug_dump {
